--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,9 @@
     <div class="wrapper page1">
         <div class="container">
 
-
+            <div class="map-wrapper">
+                <div id="map"></div>
+            </div>
 
         </div>
     </div>
@@ -36,6 +38,8 @@
     <script src="libs/wow.min.js"></script>
     <script src="libs/fancybox.min.js"></script>
     <script src="libs/nice-select.min.js"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=b814e490-74fd-4432-84de-e30e48342b14
+    &lang=ru_RU" type="text/javascript"></script>
     <script src="libs/matchHeight-min.js"></script>
     <script src="libs/nouislider.min.js"></script>
     <script src="script.js"></script>
