--- a/index.html
+++ b/index.html
@@ -2379,6 +2379,162 @@ priceFilter.noUiSlider.on('update', function (values, handle) {
 
 
 
+
+
+
+                <div class="item">
+                    <!--------------------------------------------Map------------------------------------>
+                    <div class="glob-title">
+                        Map
+                    </div>
+
+
+
+                    <div class="site-tabs">
+                        <ul class="site-tabs-buttons">
+                            <li class="active">
+                                <div class="glob-subtitle">Common</div>
+                            </li>
+                            <li>
+                                <div class="glob-subtitle">Custom</div>
+                            </li>
+                        </ul>
+
+                        <div class="site-tabs-items">
+                            <div class="site-tabs-item active">
+                                <div class="copy-content">
+                                    <div class="copy-element">
+                                        <textarea class="copy-text">
+<div class="map-wrapper">
+    <div id="map"></div>
+</div>
+                            </textarea>
+
+                                        <button class="copy-btn copy-html">
+                                            <i class="far fa-file-code"></i>
+                                            <span>HTML</span>
+                                        </button>
+                                    </div>
+
+
+                                    <div class="copy-element">
+                                        <textarea class="copy-text">
+.map-wrapper{
+    width: 100%;
+    height: 500px;
+}
+
+#map{
+    height: 100%;
+    width: 100%;
+}
+                            </textarea>
+
+                                        <button class="copy-btn copy-css">
+                                            <i class="far fa-file-code"></i>
+                                            <span>CSS</span>
+                                        </button>
+                                    </div>
+
+
+
+                                    <div class="copy-element">
+                                        <textarea class="copy-text">
+
+                            </textarea>
+
+                                        <button class="copy-btn copy-js">
+                                            <i class="far fa-file-code"></i>
+                                            <span>JS</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="site-tabs-item">
+                                <div class="copy-content">
+                                    <div class="copy-element">
+                                        <textarea class="copy-text">
+<div class="map-wrapper">
+    <div id="map"></div>
+</div>
+                            </textarea>
+
+                                        <button class="copy-btn copy-html">
+                                            <i class="far fa-file-code"></i>
+                                            <span>HTML</span>
+                                        </button>
+                                    </div>
+
+
+                                    <div class="copy-element">
+                                        <textarea class="copy-text">
+.map-wrapper{
+    width: 100%;
+    height: 500px;
+}
+
+#map{
+    height: 100%;
+    width: 100%;
+}
+                            </textarea>
+
+                                        <button class="copy-btn copy-css">
+                                            <i class="far fa-file-code"></i>
+                                            <span>CSS</span>
+                                        </button>
+                                    </div>
+
+
+
+                                    <div class="copy-element">
+                                        <textarea class="copy-text">
+ymaps.ready(init);
+function init() {
+    var myMap = new ymaps.Map("map", {
+        center: [55.964596, 37.912037],
+        zoom: 19
+    });
+
+    myMap.behaviors.disable('scrollZoom');
+
+    myPlacemark = new ymaps.Placemark(myMap.getCenter(), {
+        hintContent: 'Baloon Hint',
+        balloonContent: 'Baloon Content'
+    }, {
+        iconLayout: 'default#image',
+        iconImageHref: 'img/ico.png',
+        iconImageSize: [50, 50],
+    });
+
+    myMap.geoObjects
+        .add(myPlacemark);
+}
+                            </textarea>
+
+                                        <button class="copy-btn copy-js">
+                                            <i class="far fa-file-code"></i>
+                                            <span>JS</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+
+
+
                 <!-- <div class="item">
         <div class="glob-title">
             Mobile Menu
