--- a/index.html
+++ b/index.html
@@ -2506,6 +2506,9 @@ function init() {
         iconLayout: 'default#image',
         iconImageHref: 'img/ico.png',
         iconImageSize: [50, 50],
+
+        //preset: 'islands#icon',
+        //iconColor: '#f78888'
     });
 
     myMap.geoObjects
