--- a/index.html
+++ b/index.html
@@ -2440,7 +2440,15 @@ priceFilter.noUiSlider.on('update', function (values, handle) {
 
                                     <div class="copy-element">
                                         <textarea class="copy-text">
+ymaps.ready(init);
+function init() {
+    var myMap = new ymaps.Map("map", {
+        center: [55.964596, 37.912037],
+        zoom: 19
+    });
 
+    myMap.behaviors.disable('scrollZoom');
+}
                             </textarea>
 
                                         <button class="copy-btn copy-js">
