--- a/page1.html
+++ b/page1.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="libs/fancybox.min.css">
     <link rel="stylesheet" href="libs/nouislider.min.css">
     <link rel="stylesheet" href="libs/nice-select.min.css">
+    <link rel="stylesheet" href="libs/animate.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,7 +25,11 @@
     <div class="wrapper page1">
         <div class="container">
 
-
+            <label class="check-label">
+                <input type="checkbox" name="check-one" value="1">
+                <span class="check-box"></span>
+                <span class="check-text">Item 1</span>
+            </label>
 
         </div>
     </div>
@@ -33,13 +38,16 @@
 
     <script src="libs/jquery.min.js"></script>
     <script src="libs/swiper.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.min.js"></script> -->
+    <script src="libs/validate.min.js"></script>
     <script src="libs/wow.min.js"></script>
     <script src="libs/fancybox.min.js"></script>
     <script src="libs/nice-select.min.js"></script>
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=b814e490-74fd-4432-84de-e30e48342b14
-    &lang=ru_RU" type="text/javascript"></script>
+    <script src="libs/luxy.min.js"></script>
     <script src="libs/matchHeight-min.js"></script>
     <script src="libs/nouislider.min.js"></script>
+    <script src="libs/scrollspy.js"></script>
+
     <script src="script.js"></script>
 </body>
 
