--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@ var swiper1 = new Swiper ('.swiper1', {
 
 
                 <div class="item">
-                    <!-- ----------------------------------------Popup--------------------------------------- -->
+                    <!-- ----------------------------------------Popup----------------------------------------->
                     <div class="glob-title">
                         Popup
                     </div>
@@ -3108,49 +3108,77 @@ $(".formName").validate({
 
 
 
-                <!-- <div class="item">
-        <div class="glob-title">
-            Mobile Menu
-        </div>
+                <div class="item">
+                    <!------------------------------------------File Picker----------------------------------------->
+                    <div class="glob-title">
+                        File Picker
+                    </div>
 
-        <div class="copy-content">
-            <div class="copy-element">
-                <textarea class="copy-text">
-
+                    <div class="copy-content">
+                        <div class="copy-element">
+                            <textarea class="copy-text">
+<label class="file-label">
+    <input class="file-input" type="file" multiple>
+    <span class="file-btn">Select file</span>
+    <span class="file-result">No file selected</span>
+</label>
                                             </textarea>
 
-                <button class="copy-btn copy-html">
-                    <i class="far fa-file-code"></i>
-                    <span>HTML</span>
-                </button>
-            </div>
+                            <button class="copy-btn copy-html">
+                                <i class="far fa-file-code"></i>
+                                <span>HTML</span>
+                            </button>
+                        </div>
 
 
 
-            <div class="copy-element">
-                <textarea class="copy-text">
+                        <div class="copy-element">
+                            <textarea class="copy-text">
+.file-label input{
+    display: none;
+}
 
+.file-btn{
+    background: #000;
+    color:#fff;
+    margin-right: 15px;
+    cursor: pointer;
+}
+
+.file-result{
+
+}
                                             </textarea>
 
-                <button class="copy-btn copy-css">
-                    <i class="far fa-file-code"></i>
-                    <span>CSS</span>
-                </button>
-            </div>
+                            <button class="copy-btn copy-css">
+                                <i class="far fa-file-code"></i>
+                                <span>CSS</span>
+                            </button>
+                        </div>
 
 
-            <div class="copy-element">
-                <textarea class="copy-text">
-
+                        <div class="copy-element">
+                            <textarea class="copy-text">
+var t = $(".file-input");
+Array.prototype.forEach.call(t, function (e) {
+    e.addEventListener("change", function (e) {
+        t = this.files;
+        if (this.files.length > 1) {
+            $(".file-result").text(this.files.length + " files");
+        } else {
+            $(".file-result").text(e.target.value.split("\\").pop());
+        }
+    })
+})
                                             </textarea>
 
-                <button class="copy-btn copy-js">
-                    <i class="far fa-file-code"></i>
-                    <span>JS</span>
-                </button>
-            </div>
-        </div>
-    </div> -->
+                            <button class="copy-btn copy-js">
+                                <i class="far fa-file-code"></i>
+                                <span>JS</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
 
 
 
