--- a/page1.html
+++ b/page1.html
@@ -25,10 +25,10 @@
     <div class="wrapper page1">
         <div class="container">
 
-            <label class="check-label">
-                <input type="checkbox" name="check-one" value="1">
-                <span class="check-box"></span>
-                <span class="check-text">Item 1</span>
+            <label class="file-label">
+                <input class="file-input" type="file" multiple>
+                <span class="file-btn">Select file</span>
+                <span class="file-result">No file selected</span>
             </label>
 
         </div>
