--- a/template.html
+++ b/template.html
@@ -56,7 +56,7 @@
     <div class="wrapper wrapper-template">
         <div class="header-section">
             <div class="container">
-                <a href="#" class="ico">
+                <a href="index.html" class="ico">
                     <div class="img">
                         <img src="img/ico.png" alt="">
                     </div>
@@ -73,7 +73,7 @@
                     </div>
 
                     <ul class="ham-nav">
-                        <li><a href="template.html" class="active">Template</a></li>
+                        <li><a class="active">Template</a></li>
                         <li><a href="index.html">Tips</a></li>
                         <li><a href="snippets.html">Snippets</a></li>
                     </ul>
