--- a/test.html
+++ b/test.html
@@ -21,9 +21,9 @@
 <body>
 
 
-
     <div class="wrapper page1">
         <div class="container">
+
 
 
 
@@ -32,17 +32,16 @@
 
 
 
+
     <script src="libs/jquery.min.js"></script>
-    <script src="libs/swiper.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.min.js"></script> -->
-    <script src="libs/validate.min.js"></script>
-    <script src="libs/wow.min.js"></script>
+    <script src="libs/clipboard.js"></script>
     <script src="libs/fancybox.min.js"></script>
-    <script src="libs/nice-select.min.js"></script>
+    <script src="libs/datepicker.min.js"></script>
+    <script src="libs/swiper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.4.6/fuse.min.js"></script>
     <script src="libs/luxy.min.js"></script>
     <script src="libs/matchHeight-min.js"></script>
-    <script src="libs/nouislider.min.js"></script>
-    <script src="libs/scrollspy.js"></script>
+    <script src="libs/wow.min.js"></script>
     <script src="script.js"></script>
 </body>
 
