--- a/index.html
+++ b/index.html
@@ -3551,6 +3551,46 @@ $('.submenu .acc-item').on("click", ".acc-button", function () {
 
 
 
+
+
+
+
+
+
+
+
+        <!-- <div class="pages-navigation">
+            <div class="container">
+                <div class="flex-wrap">
+                    <div class="navigation-item-wrap">
+                        <a href="template.html" class="navigation-item">
+                            Template
+                        </a>
+                    </div>
+
+                    <div class="navigation-item-wrap">
+                        <a class="navigation-item active">
+                            Tips
+                        </a>
+                    </div>
+
+                    <div class="navigation-item-wrap">
+                        <a href="snippets.html" class="navigation-item">
+                            Snippets
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+
+
+
+
+
+
+
+
+
         <div class="footer-section">
             <div class="footer-text">
                 &copy; Powered by <a data-fancybox href="img/auth.jpg" class="auth">Kaboo Bear</a>
