--- a/snippets.html
+++ b/snippets.html
@@ -299,6 +299,42 @@ $(".formName").validate({
 
 
 
+
+
+
+
+        <!-- <div class="pages-navigation">
+            <div class="container">
+                <div class="flex-wrap">
+                    <div class="navigation-item-wrap">
+                        <a href="template.html" class="navigation-item">
+                            Template
+                        </a>
+                    </div>
+
+                    <div class="navigation-item-wrap">
+                        <a class="navigation-item active">
+                            Snippets
+                        </a>
+                    </div>
+
+                    <div class="navigation-item-wrap">
+                        <a href="index.html" class="navigation-item">
+                            Tips
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+
+
+
+
+
+
+
+
+
         <div class="footer-section">
             <div class="footer-text">
                 &copy; Powered by <a data-fancybox href="img/auth.jpg" class="auth">Kaboo Bear</a>
