--- a/index.html
+++ b/index.html
@@ -3768,15 +3768,41 @@ $('.star-item input').click(function(){
 
 
 
-                <!-- <div class="item   main-category">
+                <div class="item   main-category">
+                    <!------------------------------------------Table----------------------------------------->
                     <div class="glob-title">
-                        Stars
+                        Table
                     </div>
 
                     <div class="copy-content">
                         <div class="copy-element">
                             <textarea class="copy-text">
-
+<table class="transform-table">
+    <tr>
+        <th>Title1</th>
+        <th>Title2</th>
+        <th>Title3</th>
+        <th>Title4</th>
+    </tr>
+    <tr>
+        <td data-label="Title1">Col1</td>
+        <td data-label="Title2">Col2</td>
+        <td data-label="Title3">Col3</td>
+        <td data-label="Title4">Col4</td>
+    </tr>
+    <tr>
+        <td data-label="Title1">Col1</td>
+        <td data-label="Title2">Col2</td>
+        <td data-label="Title3">Col3</td>
+        <td data-label="Title4">Col4</td>
+    </tr>
+    <tr>
+        <td data-label="Title1">Col1</td>
+        <td data-label="Title2">Col2</td>
+        <td data-label="Title3">Col3</td>
+        <td data-label="Title4">Col4</td>
+    </tr>
+</table>
                                             </textarea>
 
                             <button class="copy-btn copy-html">
@@ -3789,7 +3815,62 @@ $('.star-item input').click(function(){
 
                         <div class="copy-element">
                             <textarea class="copy-text">
+.transform-table {
+    border-collapse: collapse;
+    width: 100%;
+    position: relative;
+}
 
+.transform-table tr {
+    position: relative;
+}
+
+.transform-table th,
+.transform-table td {
+    text-align: left;
+    padding: 15px 30px;
+    padding-left: 0;
+}
+
+.transform-table td {
+
+}
+
+.transform-table th {
+
+}
+
+@media (max-width:1199px) {
+
+}
+
+@media (max-width:992px) {
+
+}
+
+@media (max-width: 768px) {
+    .transform-table tr {
+        display: block;
+        margin-bottom: 25px;
+    }
+
+    .transform-table td {
+        display: block;
+        padding: 5px 0;
+    }
+
+    .transform-table th {
+        display: none;
+    }
+
+    .transform-table td::before {
+        content: attr(data-label);
+        display: inline-block;
+        max-width: 100px;
+        width: 100%;
+        font-weight: 700;
+    }
+}
                                             </textarea>
 
                             <button class="copy-btn copy-css">
@@ -3797,20 +3878,8 @@ $('.star-item input').click(function(){
                                 <span>CSS</span>
                             </button>
                         </div>
-
-
-                        <div class="copy-element">
-                            <textarea class="copy-text">
-
-                                            </textarea>
-
-                            <button class="copy-btn copy-js">
-                                <i class="far fa-file-code"></i>
-                                <span>JS</span>
-                            </button>
-                        </div>
                     </div>
-                </div> -->
+                </div>
 
 
 
