--- a/index.html
+++ b/index.html
@@ -3720,52 +3720,6 @@ $('.star-item input').click(function(){
 
 
 
-                <div class="item   main-category">
-                    <div class="glob-title">
-                        Stars
-                    </div>
-
-                    <div class="copy-content">
-                        <div class="copy-element">
-                            <textarea class="copy-text">
-
-                                            </textarea>
-
-                            <button class="copy-btn copy-html">
-                                <i class="far fa-file-code"></i>
-                                <span>HTML</span>
-                            </button>
-                        </div>
-
-
-
-                        <div class="copy-element">
-                            <textarea class="copy-text">
-
-                                            </textarea>
-
-                            <button class="copy-btn copy-css">
-                                <i class="far fa-file-code"></i>
-                                <span>CSS</span>
-                            </button>
-                        </div>
-
-
-                        <div class="copy-element">
-                            <textarea class="copy-text">
-
-                                            </textarea>
-
-                            <button class="copy-btn copy-js">
-                                <i class="far fa-file-code"></i>
-                                <span>JS</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-
-
 
 
                 <div class="item   main-category">
@@ -3884,6 +3838,12 @@ $('.star-item input').click(function(){
 
 
 
+
+
+
+
+
+
                 <!-- <div class="item   main-category">
                     <div class="glob-title">
                         Stars
@@ -3927,6 +3887,62 @@ $('.star-item input').click(function(){
                         </div>
                     </div>
                 </div> -->
+
+
+
+
+
+
+
+
+
+
+                <!-- <div class="item   main-category">
+                    <div class="glob-title">
+                        Stars
+                    </div>
+
+                    <div class="copy-content">
+                        <div class="copy-element">
+                            <textarea class="copy-text">
+
+                                            </textarea>
+
+                            <button class="copy-btn copy-html">
+                                <i class="far fa-file-code"></i>
+                                <span>HTML</span>
+                            </button>
+                        </div>
+
+
+
+                        <div class="copy-element">
+                            <textarea class="copy-text">
+
+                                            </textarea>
+
+                            <button class="copy-btn copy-css">
+                                <i class="far fa-file-code"></i>
+                                <span>CSS</span>
+                            </button>
+                        </div>
+
+
+                        <div class="copy-element">
+                            <textarea class="copy-text">
+
+                                            </textarea>
+
+                            <button class="copy-btn copy-js">
+                                <i class="far fa-file-code"></i>
+                                <span>JS</span>
+                            </button>
+                        </div>
+                    </div>
+                </div> -->
+
+
+
 
 
 
