--- a/test.html
+++ b/test.html
@@ -2,46 +2,43 @@
 
 <html lang="ru">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
 
-    <link rel="stylesheet" href="libs/swiper.min.css">
-    <link rel="stylesheet" href="libs/fancybox.min.css">
-    <link rel="stylesheet" href="libs/nouislider.min.css">
-    <link rel="stylesheet" href="libs/nice-select.min.css">
-    <link rel="stylesheet" href="libs/animate.css">
-    <link rel="stylesheet" href="style.css">
-</head>
+        <link rel="stylesheet" href="libs/swiper.min.css">
+        <link rel="stylesheet" href="libs/fancybox.min.css">
+        <link rel="stylesheet" href="libs/nouislider.min.css">
+        <link rel="stylesheet" href="libs/nice-select.min.css">
+        <link rel="stylesheet" href="libs/animate.css">
+        <link rel="stylesheet" href="libs/mCustomScrollbar.min.css">
+        <link rel="stylesheet" href="libs/mCustomScrollbar.min.css">
+        <link rel="stylesheet" href="style.css">
+    </head>
 
+    <body>
 
-
-<body>
-
-
-    <div class="wrapper page1">
-        <div class="container">
-
+        <div class="wrapper page1">
+            <div class="container">
 
 
+
+            </div>
         </div>
-    </div>
 
-
-
-
-    <script src="libs/jquery.min.js"></script>
-    <script src="libs/clipboard.js"></script>
-    <script src="libs/fancybox.min.js"></script>
-    <script src="libs/datepicker.min.js"></script>
-    <script src="libs/swiper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.4.6/fuse.min.js"></script>
-    <script src="libs/luxy.min.js"></script>
-    <script src="libs/matchHeight-min.js"></script>
-    <script src="libs/wow.min.js"></script>
-    <script src="script.js"></script>
-</body>
+        <script src="libs/jquery.min.js"></script>
+        <script src="libs/clipboard.js"></script>
+        <script src="libs/fancybox.min.js"></script>
+        <script src="libs/datepicker.min.js"></script>
+        <script src="libs/swiper.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.4.6/fuse.min.js"></script>
+        <script src="libs/luxy.min.js"></script>
+        <script src="libs/mCustomScrollbar.concat.min.js"></script>
+        <script src="libs/matchHeight-min.js"></script>
+        <script src="libs/wow.min.js"></script>
+        <script src="script.js"></script>
+    </body>
 
 </html>
